# intel-xpu-backend-for-triton

./: CMakeLists.txt
.github/workflows/: build_and_test.yml  build_and_test_2.yaml  email_test.yml
cmake/: FetchLLVM.cmake  FindSPIRVToLLVMTranslator.cmake
include/triton/Conversion/TritonGPUToSPIRV/: Passes.td  VCIntrinsicHelper.h
include/triton/Dialect/TritonIntelGPU/Transforms/: Passes.h  Passes.td
lib/Conversion/TritonGPUToSPIRV/: CMakeLists.txt  ConvertLayoutOpToSPIRV.cpp  DotOpToSPIRV.cpp  ElementwiseOpToSPIRV.cpp  LoadStoreOpToSPIRV.cpp  TritonGPUToSPIRV.cpp  TritonGPUToSPIRVBase.h  TritonGPUToSPIRVPass.cpp  TritonSPIRVToLLVM.cpp  TritonSPIRVToLLVM.h  TypeConverter.cpp  Utility.cpp  Utility.h  ViewOpToSPIRV.cpp
lib/Conversion/TritonGPUToSPIRV/DotOpToSPIRV/: FMA.cpp  MMAv2.cpp
lib/Dialect/TritonIntelGPU/Transforms/: CMakeLists.txt  RewriteTensorPointer.cpp
lib/Dialect/TritonIntelGPU/Transforms/Pipeliner/: MatmulLoopPipeline.cpp  PipelineExpander.cpp  SoftwarePipeliner.cpp
python/: __init__.py  extensions.py
python/csrc/: intel_xpu_backend_for_triton.cc
python/src/: runtime.cc  translation.cc  triton.cc
python/test/unit/language/: test_core.py  test_line_info.py
python/triton/runtime/: driver.py
python/utils/: sycl.cpp
scripts/: test-triton.sh
